{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 292,
  "lineage": "44728fb9-1496-8bc7-baf3-1537e3fa064d",
  "resources": [
    {
      "module": "module.dev_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "module.dev_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:security-group/sg-01e6b5abb1d5f7dd2",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-01e6b5abb1d5f7dd2",
            "ingress": [],
            "name": "eks-dev-cluster-2024110916200598570000000b",
            "name_prefix": "eks-dev-cluster-",
            "owner_id": "224264690046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-dev-cluster"
            },
            "tags_all": {
              "Name": "eks-dev-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef5d7539895d0bd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "module.dev_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:security-group/sg-04947759e0f5ec5c6",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-04947759e0f5ec5c6",
            "ingress": [],
            "name": "eks-dev-node-2024110916200567360000000a",
            "name_prefix": "eks-dev-node-",
            "owner_id": "224264690046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-dev-node",
              "kubernetes.io/cluster/eks-dev": "owned"
            },
            "tags_all": {
              "Name": "eks-dev-node",
              "kubernetes.io/cluster/eks-dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef5d7539895d0bd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "module.dev_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-4035014309",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01e6b5abb1d5f7dd2",
            "security_group_rule_id": "sgr-014816b51d7eddcee",
            "self": false,
            "source_security_group_id": "sg-04947759e0f5ec5c6",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_cluster.module.eks.aws_security_group.cluster",
            "module.dev_cluster.module.eks.aws_security_group.node",
            "module.dev_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "module.dev_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2914143476",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04947759e0f5ec5c6",
            "security_group_rule_id": "sgr-02f2e8db315df9022",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_cluster.module.eks.aws_security_group.cluster",
            "module.dev_cluster.module.eks.aws_security_group.node",
            "module.dev_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1454929860",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04947759e0f5ec5c6",
            "security_group_rule_id": "sgr-05de759a9e4a9a2eb",
            "self": false,
            "source_security_group_id": "sg-01e6b5abb1d5f7dd2",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_cluster.module.eks.aws_security_group.cluster",
            "module.dev_cluster.module.eks.aws_security_group.node",
            "module.dev_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1019570321",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04947759e0f5ec5c6",
            "security_group_rule_id": "sgr-03a679e9ade4bccc9",
            "self": false,
            "source_security_group_id": "sg-01e6b5abb1d5f7dd2",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_cluster.module.eks.aws_security_group.cluster",
            "module.dev_cluster.module.eks.aws_security_group.node",
            "module.dev_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-4119269127",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04947759e0f5ec5c6",
            "security_group_rule_id": "sgr-0299be14e6e092b04",
            "self": false,
            "source_security_group_id": "sg-01e6b5abb1d5f7dd2",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_cluster.module.eks.aws_security_group.cluster",
            "module.dev_cluster.module.eks.aws_security_group.node",
            "module.dev_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3873125158",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04947759e0f5ec5c6",
            "security_group_rule_id": "sgr-03d9298f610b36ad0",
            "self": false,
            "source_security_group_id": "sg-01e6b5abb1d5f7dd2",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_cluster.module.eks.aws_security_group.cluster",
            "module.dev_cluster.module.eks.aws_security_group.node",
            "module.dev_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2189033709",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04947759e0f5ec5c6",
            "security_group_rule_id": "sgr-0f277b6a93aac5d25",
            "self": false,
            "source_security_group_id": "sg-01e6b5abb1d5f7dd2",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_cluster.module.eks.aws_security_group.cluster",
            "module.dev_cluster.module.eks.aws_security_group.node",
            "module.dev_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3446108550",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04947759e0f5ec5c6",
            "security_group_rule_id": "sgr-049ae7e35fd49b805",
            "self": false,
            "source_security_group_id": "sg-01e6b5abb1d5f7dd2",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_cluster.module.eks.aws_security_group.cluster",
            "module.dev_cluster.module.eks.aws_security_group.node",
            "module.dev_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2129200424",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04947759e0f5ec5c6",
            "security_group_rule_id": "sgr-09c1bb8186362444a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_cluster.module.eks.aws_security_group.cluster",
            "module.dev_cluster.module.eks.aws_security_group.node",
            "module.dev_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2465003022",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04947759e0f5ec5c6",
            "security_group_rule_id": "sgr-045f9bdb47d6560f4",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_cluster.module.eks.aws_security_group.cluster",
            "module.dev_cluster.module.eks.aws_security_group.node",
            "module.dev_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-917722593",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-04947759e0f5ec5c6",
            "security_group_rule_id": "sgr-056094c1bfa6c42af",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_cluster.module.eks.aws_security_group.cluster",
            "module.dev_cluster.module.eks.aws_security_group.node",
            "module.dev_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "module.dev_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:network-acl/acl-0d038f6d0498ee5ab",
            "default_network_acl_id": "acl-0d038f6d0498ee5ab",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d038f6d0498ee5ab",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "224264690046",
            "subnet_ids": null,
            "tags": {
              "Name": "k8s-dev-vpc-default"
            },
            "tags_all": {
              "Name": "k8s-dev-vpc-default"
            },
            "vpc_id": "vpc-0ef5d7539895d0bd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_cluster.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "module.dev_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:route-table/rtb-0cd6eb1b90cd2806e",
            "default_route_table_id": "rtb-0cd6eb1b90cd2806e",
            "id": "rtb-0cd6eb1b90cd2806e",
            "owner_id": "224264690046",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "k8s-dev-vpc-default"
            },
            "tags_all": {
              "Name": "k8s-dev-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ef5d7539895d0bd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_cluster.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "module.dev_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:security-group/sg-024fad1edbcd094b8",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-024fad1edbcd094b8",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "224264690046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-dev-vpc-default"
            },
            "tags_all": {
              "Name": "k8s-dev-vpc-default"
            },
            "vpc_id": "vpc-0ef5d7539895d0bd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_cluster.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.dev_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d6d6395fef4e787f",
            "arn": "arn:aws:ec2:ap-south-1:224264690046:elastic-ip/eipalloc-0d6d6395fef4e787f",
            "domain": "vpc",
            "id": "eipalloc-0d6d6395fef4e787f",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-203-61-6.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.203.61.6",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "k8s-dev-vpc-ap-south-1a"
            },
            "tags_all": {
              "Name": "k8s-dev-vpc-ap-south-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.dev_cluster.data.aws_availability_zones.available",
            "module.dev_cluster.module.vpc.aws_internet_gateway.this",
            "module.dev_cluster.module.vpc.aws_vpc.this",
            "module.dev_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.dev_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:internet-gateway/igw-088146f653fb46c62",
            "id": "igw-088146f653fb46c62",
            "owner_id": "224264690046",
            "tags": {
              "Name": "k8s-dev-vpc"
            },
            "tags_all": {
              "Name": "k8s-dev-vpc"
            },
            "vpc_id": "vpc-0ef5d7539895d0bd8"
          },
          "dependencies": [
            "module.dev_cluster.module.vpc.aws_vpc.this",
            "module.dev_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.dev_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d6d6395fef4e787f",
            "association_id": "eipassoc-01c07c22505e5355a",
            "connectivity_type": "public",
            "id": "nat-05cbeebb93a738954",
            "network_interface_id": "eni-0533f62fa961ac124",
            "private_ip": "172.16.4.219",
            "public_ip": "13.203.61.6",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0477d6c82b815633f",
            "tags": {
              "Name": "k8s-dev-vpc-ap-south-1a"
            },
            "tags_all": {
              "Name": "k8s-dev-vpc-ap-south-1a"
            }
          },
          "dependencies": [
            "module.dev_cluster.data.aws_availability_zones.available",
            "module.dev_cluster.module.vpc.aws_eip.nat",
            "module.dev_cluster.module.vpc.aws_internet_gateway.this",
            "module.dev_cluster.module.vpc.aws_subnet.public",
            "module.dev_cluster.module.vpc.aws_vpc.this",
            "module.dev_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.dev_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04906e2ca3a5a93731080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05cbeebb93a738954",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04906e2ca3a5a9373",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_cluster.data.aws_availability_zones.available",
            "module.dev_cluster.module.vpc.aws_eip.nat",
            "module.dev_cluster.module.vpc.aws_internet_gateway.this",
            "module.dev_cluster.module.vpc.aws_nat_gateway.this",
            "module.dev_cluster.module.vpc.aws_route_table.private",
            "module.dev_cluster.module.vpc.aws_subnet.public",
            "module.dev_cluster.module.vpc.aws_vpc.this",
            "module.dev_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.dev_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-088146f653fb46c62",
            "id": "r-rtb-0ab91c9f1a605cb651080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ab91c9f1a605cb65",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_cluster.data.aws_availability_zones.available",
            "module.dev_cluster.module.vpc.aws_internet_gateway.this",
            "module.dev_cluster.module.vpc.aws_route_table.public",
            "module.dev_cluster.module.vpc.aws_vpc.this",
            "module.dev_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.dev_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:route-table/rtb-04906e2ca3a5a9373",
            "id": "rtb-04906e2ca3a5a9373",
            "owner_id": "224264690046",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "k8s-dev-vpc-private"
            },
            "tags_all": {
              "Name": "k8s-dev-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef5d7539895d0bd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_cluster.data.aws_availability_zones.available",
            "module.dev_cluster.module.vpc.aws_vpc.this",
            "module.dev_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.dev_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:route-table/rtb-0ab91c9f1a605cb65",
            "id": "rtb-0ab91c9f1a605cb65",
            "owner_id": "224264690046",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "k8s-dev-vpc-public"
            },
            "tags_all": {
              "Name": "k8s-dev-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef5d7539895d0bd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_cluster.data.aws_availability_zones.available",
            "module.dev_cluster.module.vpc.aws_vpc.this",
            "module.dev_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.dev_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbfe65082b5674d5",
            "route_table_id": "rtb-04906e2ca3a5a9373",
            "subnet_id": "subnet-018be8302135ace58"
          },
          "dependencies": [
            "module.dev_cluster.data.aws_availability_zones.available",
            "module.dev_cluster.module.vpc.aws_route_table.private",
            "module.dev_cluster.module.vpc.aws_subnet.private",
            "module.dev_cluster.module.vpc.aws_vpc.this",
            "module.dev_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09dd92f62cfdc94c0",
            "route_table_id": "rtb-04906e2ca3a5a9373",
            "subnet_id": "subnet-008f7408a2d0473c7"
          },
          "dependencies": [
            "module.dev_cluster.data.aws_availability_zones.available",
            "module.dev_cluster.module.vpc.aws_route_table.private",
            "module.dev_cluster.module.vpc.aws_subnet.private",
            "module.dev_cluster.module.vpc.aws_vpc.this",
            "module.dev_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a28885920878c4a3",
            "route_table_id": "rtb-04906e2ca3a5a9373",
            "subnet_id": "subnet-06c2c53f9df982bd2"
          },
          "dependencies": [
            "module.dev_cluster.data.aws_availability_zones.available",
            "module.dev_cluster.module.vpc.aws_route_table.private",
            "module.dev_cluster.module.vpc.aws_subnet.private",
            "module.dev_cluster.module.vpc.aws_vpc.this",
            "module.dev_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.dev_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005a48466e18773a4",
            "route_table_id": "rtb-0ab91c9f1a605cb65",
            "subnet_id": "subnet-0477d6c82b815633f"
          },
          "dependencies": [
            "module.dev_cluster.data.aws_availability_zones.available",
            "module.dev_cluster.module.vpc.aws_route_table.public",
            "module.dev_cluster.module.vpc.aws_subnet.public",
            "module.dev_cluster.module.vpc.aws_vpc.this",
            "module.dev_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4fd6236a7c6ab92",
            "route_table_id": "rtb-0ab91c9f1a605cb65",
            "subnet_id": "subnet-0a2f8be1aff58e297"
          },
          "dependencies": [
            "module.dev_cluster.data.aws_availability_zones.available",
            "module.dev_cluster.module.vpc.aws_route_table.public",
            "module.dev_cluster.module.vpc.aws_subnet.public",
            "module.dev_cluster.module.vpc.aws_vpc.this",
            "module.dev_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085df80c6084f821f",
            "route_table_id": "rtb-0ab91c9f1a605cb65",
            "subnet_id": "subnet-01c56260bf8784ce1"
          },
          "dependencies": [
            "module.dev_cluster.data.aws_availability_zones.available",
            "module.dev_cluster.module.vpc.aws_route_table.public",
            "module.dev_cluster.module.vpc.aws_subnet.public",
            "module.dev_cluster.module.vpc.aws_vpc.this",
            "module.dev_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.dev_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:subnet/subnet-018be8302135ace58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018be8302135ace58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224264690046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-dev-vpc-private-ap-south-1a"
            },
            "tags_all": {
              "Name": "k8s-dev-vpc-private-ap-south-1a"
            },
            "vpc_id": "vpc-0ef5d7539895d0bd8"
          },
          "dependencies": [
            "module.dev_cluster.data.aws_availability_zones.available",
            "module.dev_cluster.module.vpc.aws_vpc.this",
            "module.dev_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:subnet/subnet-008f7408a2d0473c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008f7408a2d0473c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224264690046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-dev-vpc-private-ap-south-1b"
            },
            "tags_all": {
              "Name": "k8s-dev-vpc-private-ap-south-1b"
            },
            "vpc_id": "vpc-0ef5d7539895d0bd8"
          },
          "dependencies": [
            "module.dev_cluster.data.aws_availability_zones.available",
            "module.dev_cluster.module.vpc.aws_vpc.this",
            "module.dev_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:subnet/subnet-06c2c53f9df982bd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c2c53f9df982bd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224264690046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-dev-vpc-private-ap-south-1c"
            },
            "tags_all": {
              "Name": "k8s-dev-vpc-private-ap-south-1c"
            },
            "vpc_id": "vpc-0ef5d7539895d0bd8"
          },
          "dependencies": [
            "module.dev_cluster.data.aws_availability_zones.available",
            "module.dev_cluster.module.vpc.aws_vpc.this",
            "module.dev_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.dev_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:subnet/subnet-0477d6c82b815633f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0477d6c82b815633f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224264690046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-dev-vpc-public-ap-south-1a",
              "kubernetes.io/cluster/learnk8s": "shared",
              "kuebernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "k8s-dev-vpc-public-ap-south-1a",
              "kubernetes.io/cluster/learnk8s": "shared",
              "kuebernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ef5d7539895d0bd8"
          },
          "dependencies": [
            "module.dev_cluster.data.aws_availability_zones.available",
            "module.dev_cluster.module.vpc.aws_vpc.this",
            "module.dev_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:subnet/subnet-0a2f8be1aff58e297",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2f8be1aff58e297",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224264690046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-dev-vpc-public-ap-south-1b",
              "kubernetes.io/cluster/learnk8s": "shared",
              "kuebernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "k8s-dev-vpc-public-ap-south-1b",
              "kubernetes.io/cluster/learnk8s": "shared",
              "kuebernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ef5d7539895d0bd8"
          },
          "dependencies": [
            "module.dev_cluster.data.aws_availability_zones.available",
            "module.dev_cluster.module.vpc.aws_vpc.this",
            "module.dev_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:subnet/subnet-01c56260bf8784ce1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.16.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c56260bf8784ce1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224264690046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-dev-vpc-public-ap-south-1c",
              "kubernetes.io/cluster/learnk8s": "shared",
              "kuebernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "k8s-dev-vpc-public-ap-south-1c",
              "kubernetes.io/cluster/learnk8s": "shared",
              "kuebernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ef5d7539895d0bd8"
          },
          "dependencies": [
            "module.dev_cluster.data.aws_availability_zones.available",
            "module.dev_cluster.module.vpc.aws_vpc.this",
            "module.dev_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.dev_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:vpc/vpc-0ef5d7539895d0bd8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0d038f6d0498ee5ab",
            "default_route_table_id": "rtb-0cd6eb1b90cd2806e",
            "default_security_group_id": "sg-024fad1edbcd094b8",
            "dhcp_options_id": "dopt-00633f2212ba0ab88",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ef5d7539895d0bd8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cd6eb1b90cd2806e",
            "owner_id": "224264690046",
            "tags": {
              "Name": "k8s-dev-vpc"
            },
            "tags_all": {
              "Name": "k8s-dev-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "module.prod_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:security-group/sg-0fa5e6fa207f07d6d",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0fa5e6fa207f07d6d",
            "ingress": [],
            "name": "eks-production-cluster-2024110916200432350000000a",
            "name_prefix": "eks-production-cluster-",
            "owner_id": "224264690046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-production-cluster"
            },
            "tags_all": {
              "Name": "eks-production-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3f4e702f6775b78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "module.prod_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:security-group/sg-0b2827132e6810743",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0b2827132e6810743",
            "ingress": [],
            "name": "eks-production-node-2024110916200435580000000b",
            "name_prefix": "eks-production-node-",
            "owner_id": "224264690046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-production-node",
              "kubernetes.io/cluster/eks-production": "owned"
            },
            "tags_all": {
              "Name": "eks-production-node",
              "kubernetes.io/cluster/eks-production": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3f4e702f6775b78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "module.prod_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3589656751",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fa5e6fa207f07d6d",
            "security_group_rule_id": "sgr-0c5be59f211e5cc10",
            "self": false,
            "source_security_group_id": "sg-0b2827132e6810743",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "module.prod_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-61504947",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b2827132e6810743",
            "security_group_rule_id": "sgr-0d50b72ae2493b040",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1666918094",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b2827132e6810743",
            "security_group_rule_id": "sgr-00256e22e451378b2",
            "self": false,
            "source_security_group_id": "sg-0fa5e6fa207f07d6d",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1502748859",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b2827132e6810743",
            "security_group_rule_id": "sgr-0d6d3eee89c321541",
            "self": false,
            "source_security_group_id": "sg-0fa5e6fa207f07d6d",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2429568813",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b2827132e6810743",
            "security_group_rule_id": "sgr-0245b6f598a7a5331",
            "self": false,
            "source_security_group_id": "sg-0fa5e6fa207f07d6d",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2207021836",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b2827132e6810743",
            "security_group_rule_id": "sgr-034590a3b489adc08",
            "self": false,
            "source_security_group_id": "sg-0fa5e6fa207f07d6d",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3878504647",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b2827132e6810743",
            "security_group_rule_id": "sgr-0e7f1d4395c25d1fc",
            "self": false,
            "source_security_group_id": "sg-0fa5e6fa207f07d6d",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1507845498",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b2827132e6810743",
            "security_group_rule_id": "sgr-041c34c9fccf90526",
            "self": false,
            "source_security_group_id": "sg-0fa5e6fa207f07d6d",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-122308557",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b2827132e6810743",
            "security_group_rule_id": "sgr-0130b78924b1784f3",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1237345647",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b2827132e6810743",
            "security_group_rule_id": "sgr-04130909a26b6d6f4",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3986671232",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0b2827132e6810743",
            "security_group_rule_id": "sgr-034dfb6185ad84612",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_cluster.module.eks.aws_security_group.cluster",
            "module.prod_cluster.module.eks.aws_security_group.node",
            "module.prod_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "module.prod_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:network-acl/acl-0a59f6de729936c9e",
            "default_network_acl_id": "acl-0a59f6de729936c9e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a59f6de729936c9e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "224264690046",
            "subnet_ids": [
              "subnet-0061e1e226c2f10b4",
              "subnet-0242df30fb627d563",
              "subnet-07a22ed1c6d2462a0",
              "subnet-0b02d1863ae40a5d6",
              "subnet-0bb5bea012ba3c2a8"
            ],
            "tags": {
              "Name": "k8s-production-vpc-default"
            },
            "tags_all": {
              "Name": "k8s-production-vpc-default"
            },
            "vpc_id": "vpc-0a3f4e702f6775b78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_cluster.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "module.prod_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:route-table/rtb-02292999d6a9b76e0",
            "default_route_table_id": "rtb-02292999d6a9b76e0",
            "id": "rtb-02292999d6a9b76e0",
            "owner_id": "224264690046",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "k8s-production-vpc-default"
            },
            "tags_all": {
              "Name": "k8s-production-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0a3f4e702f6775b78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_cluster.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "module.prod_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:security-group/sg-055bbec66f66262d5",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-055bbec66f66262d5",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "224264690046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-production-vpc-default"
            },
            "tags_all": {
              "Name": "k8s-production-vpc-default"
            },
            "vpc_id": "vpc-0a3f4e702f6775b78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_cluster.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.prod_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff1aa67d59d93d6c",
            "arn": "arn:aws:ec2:ap-south-1:224264690046:elastic-ip/eipalloc-0ff1aa67d59d93d6c",
            "domain": "vpc",
            "id": "eipalloc-0ff1aa67d59d93d6c",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-6-6-181.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.6.181",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "k8s-production-vpc-ap-south-1a"
            },
            "tags_all": {
              "Name": "k8s-production-vpc-ap-south-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.prod_cluster.data.aws_availability_zones.available",
            "module.prod_cluster.module.vpc.aws_internet_gateway.this",
            "module.prod_cluster.module.vpc.aws_vpc.this",
            "module.prod_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.prod_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:internet-gateway/igw-02f061eca2f3cb001",
            "id": "igw-02f061eca2f3cb001",
            "owner_id": "224264690046",
            "tags": {
              "Name": "k8s-production-vpc"
            },
            "tags_all": {
              "Name": "k8s-production-vpc"
            },
            "vpc_id": "vpc-0a3f4e702f6775b78"
          },
          "dependencies": [
            "module.prod_cluster.module.vpc.aws_vpc.this",
            "module.prod_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.prod_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff1aa67d59d93d6c",
            "association_id": "eipassoc-05df867c5d53b6295",
            "connectivity_type": "public",
            "id": "nat-00b6b9733905d1d9a",
            "network_interface_id": "eni-0e89ca94644aa76d8",
            "private_ip": "172.16.4.68",
            "public_ip": "3.6.6.181",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dc9d8ba9c8d59b09",
            "tags": {
              "Name": "k8s-production-vpc-ap-south-1a"
            },
            "tags_all": {
              "Name": "k8s-production-vpc-ap-south-1a"
            }
          },
          "dependencies": [
            "module.prod_cluster.data.aws_availability_zones.available",
            "module.prod_cluster.module.vpc.aws_eip.nat",
            "module.prod_cluster.module.vpc.aws_internet_gateway.this",
            "module.prod_cluster.module.vpc.aws_subnet.public",
            "module.prod_cluster.module.vpc.aws_vpc.this",
            "module.prod_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.prod_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09ddb4a3fc435c8e71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00b6b9733905d1d9a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09ddb4a3fc435c8e7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_cluster.data.aws_availability_zones.available",
            "module.prod_cluster.module.vpc.aws_eip.nat",
            "module.prod_cluster.module.vpc.aws_internet_gateway.this",
            "module.prod_cluster.module.vpc.aws_nat_gateway.this",
            "module.prod_cluster.module.vpc.aws_route_table.private",
            "module.prod_cluster.module.vpc.aws_subnet.public",
            "module.prod_cluster.module.vpc.aws_vpc.this",
            "module.prod_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.prod_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02f061eca2f3cb001",
            "id": "r-rtb-04c9973afc8f84b6e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04c9973afc8f84b6e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_cluster.data.aws_availability_zones.available",
            "module.prod_cluster.module.vpc.aws_internet_gateway.this",
            "module.prod_cluster.module.vpc.aws_route_table.public",
            "module.prod_cluster.module.vpc.aws_vpc.this",
            "module.prod_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.prod_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:route-table/rtb-09ddb4a3fc435c8e7",
            "id": "rtb-09ddb4a3fc435c8e7",
            "owner_id": "224264690046",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "k8s-production-vpc-private"
            },
            "tags_all": {
              "Name": "k8s-production-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3f4e702f6775b78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_cluster.data.aws_availability_zones.available",
            "module.prod_cluster.module.vpc.aws_vpc.this",
            "module.prod_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.prod_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:route-table/rtb-04c9973afc8f84b6e",
            "id": "rtb-04c9973afc8f84b6e",
            "owner_id": "224264690046",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "k8s-production-vpc-public"
            },
            "tags_all": {
              "Name": "k8s-production-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3f4e702f6775b78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_cluster.data.aws_availability_zones.available",
            "module.prod_cluster.module.vpc.aws_vpc.this",
            "module.prod_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.prod_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fce5732ef1531b2",
            "route_table_id": "rtb-09ddb4a3fc435c8e7",
            "subnet_id": "subnet-0bb5bea012ba3c2a8"
          },
          "dependencies": [
            "module.prod_cluster.data.aws_availability_zones.available",
            "module.prod_cluster.module.vpc.aws_route_table.private",
            "module.prod_cluster.module.vpc.aws_subnet.private",
            "module.prod_cluster.module.vpc.aws_vpc.this",
            "module.prod_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07933ecdb0ea2b0c6",
            "route_table_id": "rtb-09ddb4a3fc435c8e7",
            "subnet_id": "subnet-07a22ed1c6d2462a0"
          },
          "dependencies": [
            "module.prod_cluster.data.aws_availability_zones.available",
            "module.prod_cluster.module.vpc.aws_route_table.private",
            "module.prod_cluster.module.vpc.aws_subnet.private",
            "module.prod_cluster.module.vpc.aws_vpc.this",
            "module.prod_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0265b665d16278df3",
            "route_table_id": "rtb-09ddb4a3fc435c8e7",
            "subnet_id": "subnet-0061e1e226c2f10b4"
          },
          "dependencies": [
            "module.prod_cluster.data.aws_availability_zones.available",
            "module.prod_cluster.module.vpc.aws_route_table.private",
            "module.prod_cluster.module.vpc.aws_subnet.private",
            "module.prod_cluster.module.vpc.aws_vpc.this",
            "module.prod_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.prod_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e84eca7290fc10ca",
            "route_table_id": "rtb-04c9973afc8f84b6e",
            "subnet_id": "subnet-0dc9d8ba9c8d59b09"
          },
          "dependencies": [
            "module.prod_cluster.data.aws_availability_zones.available",
            "module.prod_cluster.module.vpc.aws_route_table.public",
            "module.prod_cluster.module.vpc.aws_subnet.public",
            "module.prod_cluster.module.vpc.aws_vpc.this",
            "module.prod_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0599bb4cc093e9812",
            "route_table_id": "rtb-04c9973afc8f84b6e",
            "subnet_id": "subnet-0242df30fb627d563"
          },
          "dependencies": [
            "module.prod_cluster.data.aws_availability_zones.available",
            "module.prod_cluster.module.vpc.aws_route_table.public",
            "module.prod_cluster.module.vpc.aws_subnet.public",
            "module.prod_cluster.module.vpc.aws_vpc.this",
            "module.prod_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01172db086ef095b2",
            "route_table_id": "rtb-04c9973afc8f84b6e",
            "subnet_id": "subnet-0b02d1863ae40a5d6"
          },
          "dependencies": [
            "module.prod_cluster.data.aws_availability_zones.available",
            "module.prod_cluster.module.vpc.aws_route_table.public",
            "module.prod_cluster.module.vpc.aws_subnet.public",
            "module.prod_cluster.module.vpc.aws_vpc.this",
            "module.prod_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.prod_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:subnet/subnet-0bb5bea012ba3c2a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb5bea012ba3c2a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224264690046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-production-vpc-private-ap-south-1a"
            },
            "tags_all": {
              "Name": "k8s-production-vpc-private-ap-south-1a"
            },
            "vpc_id": "vpc-0a3f4e702f6775b78"
          },
          "dependencies": [
            "module.prod_cluster.data.aws_availability_zones.available",
            "module.prod_cluster.module.vpc.aws_vpc.this",
            "module.prod_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:subnet/subnet-07a22ed1c6d2462a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a22ed1c6d2462a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224264690046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-production-vpc-private-ap-south-1b"
            },
            "tags_all": {
              "Name": "k8s-production-vpc-private-ap-south-1b"
            },
            "vpc_id": "vpc-0a3f4e702f6775b78"
          },
          "dependencies": [
            "module.prod_cluster.data.aws_availability_zones.available",
            "module.prod_cluster.module.vpc.aws_vpc.this",
            "module.prod_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:subnet/subnet-0061e1e226c2f10b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0061e1e226c2f10b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224264690046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-production-vpc-private-ap-south-1c"
            },
            "tags_all": {
              "Name": "k8s-production-vpc-private-ap-south-1c"
            },
            "vpc_id": "vpc-0a3f4e702f6775b78"
          },
          "dependencies": [
            "module.prod_cluster.data.aws_availability_zones.available",
            "module.prod_cluster.module.vpc.aws_vpc.this",
            "module.prod_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.prod_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:subnet/subnet-0dc9d8ba9c8d59b09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc9d8ba9c8d59b09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224264690046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-production-vpc-public-ap-south-1a",
              "kubernetes.io/cluster/learnk8s": "shared",
              "kuebernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "k8s-production-vpc-public-ap-south-1a",
              "kubernetes.io/cluster/learnk8s": "shared",
              "kuebernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a3f4e702f6775b78"
          },
          "dependencies": [
            "module.prod_cluster.data.aws_availability_zones.available",
            "module.prod_cluster.module.vpc.aws_vpc.this",
            "module.prod_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:subnet/subnet-0242df30fb627d563",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0242df30fb627d563",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224264690046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-production-vpc-public-ap-south-1b",
              "kubernetes.io/cluster/learnk8s": "shared",
              "kuebernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "k8s-production-vpc-public-ap-south-1b",
              "kubernetes.io/cluster/learnk8s": "shared",
              "kuebernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a3f4e702f6775b78"
          },
          "dependencies": [
            "module.prod_cluster.data.aws_availability_zones.available",
            "module.prod_cluster.module.vpc.aws_vpc.this",
            "module.prod_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:subnet/subnet-0b02d1863ae40a5d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.16.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b02d1863ae40a5d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224264690046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-production-vpc-public-ap-south-1c",
              "kubernetes.io/cluster/learnk8s": "shared",
              "kuebernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "k8s-production-vpc-public-ap-south-1c",
              "kubernetes.io/cluster/learnk8s": "shared",
              "kuebernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a3f4e702f6775b78"
          },
          "dependencies": [
            "module.prod_cluster.data.aws_availability_zones.available",
            "module.prod_cluster.module.vpc.aws_vpc.this",
            "module.prod_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.prod_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:vpc/vpc-0a3f4e702f6775b78",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0a59f6de729936c9e",
            "default_route_table_id": "rtb-02292999d6a9b76e0",
            "default_security_group_id": "sg-055bbec66f66262d5",
            "dhcp_options_id": "dopt-00633f2212ba0ab88",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a3f4e702f6775b78",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02292999d6a9b76e0",
            "owner_id": "224264690046",
            "tags": {
              "Name": "k8s-production-vpc"
            },
            "tags_all": {
              "Name": "k8s-production-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.staging_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "module.staging_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:security-group/sg-05ae5afd2e185c9a5",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-05ae5afd2e185c9a5",
            "ingress": [],
            "name": "eks-staging-cluster-2024110916201290680000000a",
            "name_prefix": "eks-staging-cluster-",
            "owner_id": "224264690046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-staging-cluster"
            },
            "tags_all": {
              "Name": "eks-staging-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c18147fe7ff676c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.staging_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.staging_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "module.staging_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:security-group/sg-06ae91e4b70ca40f5",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-06ae91e4b70ca40f5",
            "ingress": [],
            "name": "eks-staging-node-2024110916201300440000000b",
            "name_prefix": "eks-staging-node-",
            "owner_id": "224264690046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-staging-node",
              "kubernetes.io/cluster/eks-staging": "owned"
            },
            "tags_all": {
              "Name": "eks-staging-node",
              "kubernetes.io/cluster/eks-staging": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c18147fe7ff676c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.staging_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.staging_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "module.staging_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3554297775",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05ae5afd2e185c9a5",
            "security_group_rule_id": "sgr-04ce0c07aa69dad05",
            "self": false,
            "source_security_group_id": "sg-06ae91e4b70ca40f5",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.staging_cluster.module.eks.aws_security_group.cluster",
            "module.staging_cluster.module.eks.aws_security_group.node",
            "module.staging_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.staging_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "module.staging_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-809438104",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06ae91e4b70ca40f5",
            "security_group_rule_id": "sgr-0aaf553153bacff9f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.staging_cluster.module.eks.aws_security_group.cluster",
            "module.staging_cluster.module.eks.aws_security_group.node",
            "module.staging_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-866431804",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ae91e4b70ca40f5",
            "security_group_rule_id": "sgr-001ac46c73b2b6a5e",
            "self": false,
            "source_security_group_id": "sg-05ae5afd2e185c9a5",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.staging_cluster.module.eks.aws_security_group.cluster",
            "module.staging_cluster.module.eks.aws_security_group.node",
            "module.staging_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2095571075",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ae91e4b70ca40f5",
            "security_group_rule_id": "sgr-0537f347cbe9622cb",
            "self": false,
            "source_security_group_id": "sg-05ae5afd2e185c9a5",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.staging_cluster.module.eks.aws_security_group.cluster",
            "module.staging_cluster.module.eks.aws_security_group.node",
            "module.staging_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3047524117",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ae91e4b70ca40f5",
            "security_group_rule_id": "sgr-092ad4487d1d097a6",
            "self": false,
            "source_security_group_id": "sg-05ae5afd2e185c9a5",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.staging_cluster.module.eks.aws_security_group.cluster",
            "module.staging_cluster.module.eks.aws_security_group.node",
            "module.staging_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2801384244",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ae91e4b70ca40f5",
            "security_group_rule_id": "sgr-09d8f5de0c1f4adc3",
            "self": false,
            "source_security_group_id": "sg-05ae5afd2e185c9a5",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.staging_cluster.module.eks.aws_security_group.cluster",
            "module.staging_cluster.module.eks.aws_security_group.node",
            "module.staging_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3260582143",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ae91e4b70ca40f5",
            "security_group_rule_id": "sgr-054e679fff0a0e22a",
            "self": false,
            "source_security_group_id": "sg-05ae5afd2e185c9a5",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.staging_cluster.module.eks.aws_security_group.cluster",
            "module.staging_cluster.module.eks.aws_security_group.node",
            "module.staging_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1455344247",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ae91e4b70ca40f5",
            "security_group_rule_id": "sgr-062f7cd6efa20d6bf",
            "self": false,
            "source_security_group_id": "sg-05ae5afd2e185c9a5",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.staging_cluster.module.eks.aws_security_group.cluster",
            "module.staging_cluster.module.eks.aws_security_group.node",
            "module.staging_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1030148593",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ae91e4b70ca40f5",
            "security_group_rule_id": "sgr-07d5beb42814ab68b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.staging_cluster.module.eks.aws_security_group.cluster",
            "module.staging_cluster.module.eks.aws_security_group.node",
            "module.staging_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2271703371",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ae91e4b70ca40f5",
            "security_group_rule_id": "sgr-022185861a05413b4",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.staging_cluster.module.eks.aws_security_group.cluster",
            "module.staging_cluster.module.eks.aws_security_group.node",
            "module.staging_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-590926500",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-06ae91e4b70ca40f5",
            "security_group_rule_id": "sgr-0e4fabb9efb5358df",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.staging_cluster.module.eks.aws_security_group.cluster",
            "module.staging_cluster.module.eks.aws_security_group.node",
            "module.staging_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.staging_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "module.staging_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:network-acl/acl-0075c04cb84b63539",
            "default_network_acl_id": "acl-0075c04cb84b63539",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0075c04cb84b63539",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "224264690046",
            "subnet_ids": null,
            "tags": {
              "Name": "k8s-staging-vpc-default"
            },
            "tags_all": {
              "Name": "k8s-staging-vpc-default"
            },
            "vpc_id": "vpc-0c18147fe7ff676c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.staging_cluster.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.staging_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "module.staging_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:route-table/rtb-027e62162cb71b94c",
            "default_route_table_id": "rtb-027e62162cb71b94c",
            "id": "rtb-027e62162cb71b94c",
            "owner_id": "224264690046",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "k8s-staging-vpc-default"
            },
            "tags_all": {
              "Name": "k8s-staging-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0c18147fe7ff676c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.staging_cluster.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.staging_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "module.staging_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:security-group/sg-0e3acb3ea2c3d0714",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0e3acb3ea2c3d0714",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "224264690046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-staging-vpc-default"
            },
            "tags_all": {
              "Name": "k8s-staging-vpc-default"
            },
            "vpc_id": "vpc-0c18147fe7ff676c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.staging_cluster.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.staging_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.staging_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e96cffec7595a33",
            "arn": "arn:aws:ec2:ap-south-1:224264690046:elastic-ip/eipalloc-07e96cffec7595a33",
            "domain": "vpc",
            "id": "eipalloc-07e96cffec7595a33",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-207-141-53.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.141.53",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "k8s-staging-vpc-ap-south-1a"
            },
            "tags_all": {
              "Name": "k8s-staging-vpc-ap-south-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.staging_cluster.data.aws_availability_zones.available",
            "module.staging_cluster.module.vpc.aws_internet_gateway.this",
            "module.staging_cluster.module.vpc.aws_vpc.this",
            "module.staging_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.staging_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.staging_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:internet-gateway/igw-03612e74e4c8ec2e6",
            "id": "igw-03612e74e4c8ec2e6",
            "owner_id": "224264690046",
            "tags": {
              "Name": "k8s-staging-vpc"
            },
            "tags_all": {
              "Name": "k8s-staging-vpc"
            },
            "vpc_id": "vpc-0c18147fe7ff676c9"
          },
          "dependencies": [
            "module.staging_cluster.module.vpc.aws_vpc.this",
            "module.staging_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.staging_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.staging_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e96cffec7595a33",
            "association_id": "eipassoc-0fdb808d47319413f",
            "connectivity_type": "public",
            "id": "nat-035fbe9c1fdc895d1",
            "network_interface_id": "eni-00274c9b04a3e2173",
            "private_ip": "172.16.4.7",
            "public_ip": "15.207.141.53",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04494c51dfcabc83a",
            "tags": {
              "Name": "k8s-staging-vpc-ap-south-1a"
            },
            "tags_all": {
              "Name": "k8s-staging-vpc-ap-south-1a"
            }
          },
          "dependencies": [
            "module.staging_cluster.data.aws_availability_zones.available",
            "module.staging_cluster.module.vpc.aws_eip.nat",
            "module.staging_cluster.module.vpc.aws_internet_gateway.this",
            "module.staging_cluster.module.vpc.aws_subnet.public",
            "module.staging_cluster.module.vpc.aws_vpc.this",
            "module.staging_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.staging_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.staging_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04bcf5975b7c2fa611080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-035fbe9c1fdc895d1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04bcf5975b7c2fa61",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.staging_cluster.data.aws_availability_zones.available",
            "module.staging_cluster.module.vpc.aws_eip.nat",
            "module.staging_cluster.module.vpc.aws_internet_gateway.this",
            "module.staging_cluster.module.vpc.aws_nat_gateway.this",
            "module.staging_cluster.module.vpc.aws_route_table.private",
            "module.staging_cluster.module.vpc.aws_subnet.public",
            "module.staging_cluster.module.vpc.aws_vpc.this",
            "module.staging_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.staging_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.staging_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03612e74e4c8ec2e6",
            "id": "r-rtb-0f7a15d8b90d735921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f7a15d8b90d73592",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.staging_cluster.data.aws_availability_zones.available",
            "module.staging_cluster.module.vpc.aws_internet_gateway.this",
            "module.staging_cluster.module.vpc.aws_route_table.public",
            "module.staging_cluster.module.vpc.aws_vpc.this",
            "module.staging_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.staging_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.staging_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:route-table/rtb-04bcf5975b7c2fa61",
            "id": "rtb-04bcf5975b7c2fa61",
            "owner_id": "224264690046",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "k8s-staging-vpc-private"
            },
            "tags_all": {
              "Name": "k8s-staging-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c18147fe7ff676c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.staging_cluster.data.aws_availability_zones.available",
            "module.staging_cluster.module.vpc.aws_vpc.this",
            "module.staging_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.staging_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.staging_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:route-table/rtb-0f7a15d8b90d73592",
            "id": "rtb-0f7a15d8b90d73592",
            "owner_id": "224264690046",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "k8s-staging-vpc-public"
            },
            "tags_all": {
              "Name": "k8s-staging-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c18147fe7ff676c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.staging_cluster.data.aws_availability_zones.available",
            "module.staging_cluster.module.vpc.aws_vpc.this",
            "module.staging_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.staging_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.staging_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a59cf07b50c6527d",
            "route_table_id": "rtb-04bcf5975b7c2fa61",
            "subnet_id": "subnet-0281dd1df6004ff41"
          },
          "dependencies": [
            "module.staging_cluster.data.aws_availability_zones.available",
            "module.staging_cluster.module.vpc.aws_route_table.private",
            "module.staging_cluster.module.vpc.aws_subnet.private",
            "module.staging_cluster.module.vpc.aws_vpc.this",
            "module.staging_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0805f641ea662b8f5",
            "route_table_id": "rtb-04bcf5975b7c2fa61",
            "subnet_id": "subnet-0aebc5e5e5647b544"
          },
          "dependencies": [
            "module.staging_cluster.data.aws_availability_zones.available",
            "module.staging_cluster.module.vpc.aws_route_table.private",
            "module.staging_cluster.module.vpc.aws_subnet.private",
            "module.staging_cluster.module.vpc.aws_vpc.this",
            "module.staging_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c923d11c209b521",
            "route_table_id": "rtb-04bcf5975b7c2fa61",
            "subnet_id": "subnet-0722b34a4aa5ec829"
          },
          "dependencies": [
            "module.staging_cluster.data.aws_availability_zones.available",
            "module.staging_cluster.module.vpc.aws_route_table.private",
            "module.staging_cluster.module.vpc.aws_subnet.private",
            "module.staging_cluster.module.vpc.aws_vpc.this",
            "module.staging_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.staging_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.staging_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017e85efe6518ffc4",
            "route_table_id": "rtb-0f7a15d8b90d73592",
            "subnet_id": "subnet-04494c51dfcabc83a"
          },
          "dependencies": [
            "module.staging_cluster.data.aws_availability_zones.available",
            "module.staging_cluster.module.vpc.aws_route_table.public",
            "module.staging_cluster.module.vpc.aws_subnet.public",
            "module.staging_cluster.module.vpc.aws_vpc.this",
            "module.staging_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022515ab7e7f55c29",
            "route_table_id": "rtb-0f7a15d8b90d73592",
            "subnet_id": "subnet-0fa571b531711b734"
          },
          "dependencies": [
            "module.staging_cluster.data.aws_availability_zones.available",
            "module.staging_cluster.module.vpc.aws_route_table.public",
            "module.staging_cluster.module.vpc.aws_subnet.public",
            "module.staging_cluster.module.vpc.aws_vpc.this",
            "module.staging_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3faa0ebb51d7513",
            "route_table_id": "rtb-0f7a15d8b90d73592",
            "subnet_id": "subnet-0b18a055a852706e0"
          },
          "dependencies": [
            "module.staging_cluster.data.aws_availability_zones.available",
            "module.staging_cluster.module.vpc.aws_route_table.public",
            "module.staging_cluster.module.vpc.aws_subnet.public",
            "module.staging_cluster.module.vpc.aws_vpc.this",
            "module.staging_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.staging_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.staging_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:subnet/subnet-0281dd1df6004ff41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0281dd1df6004ff41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224264690046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-staging-vpc-private-ap-south-1a"
            },
            "tags_all": {
              "Name": "k8s-staging-vpc-private-ap-south-1a"
            },
            "vpc_id": "vpc-0c18147fe7ff676c9"
          },
          "dependencies": [
            "module.staging_cluster.data.aws_availability_zones.available",
            "module.staging_cluster.module.vpc.aws_vpc.this",
            "module.staging_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:subnet/subnet-0aebc5e5e5647b544",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aebc5e5e5647b544",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224264690046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-staging-vpc-private-ap-south-1b"
            },
            "tags_all": {
              "Name": "k8s-staging-vpc-private-ap-south-1b"
            },
            "vpc_id": "vpc-0c18147fe7ff676c9"
          },
          "dependencies": [
            "module.staging_cluster.data.aws_availability_zones.available",
            "module.staging_cluster.module.vpc.aws_vpc.this",
            "module.staging_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:subnet/subnet-0722b34a4aa5ec829",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0722b34a4aa5ec829",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224264690046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-staging-vpc-private-ap-south-1c"
            },
            "tags_all": {
              "Name": "k8s-staging-vpc-private-ap-south-1c"
            },
            "vpc_id": "vpc-0c18147fe7ff676c9"
          },
          "dependencies": [
            "module.staging_cluster.data.aws_availability_zones.available",
            "module.staging_cluster.module.vpc.aws_vpc.this",
            "module.staging_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.staging_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.staging_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:subnet/subnet-04494c51dfcabc83a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04494c51dfcabc83a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224264690046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-staging-vpc-public-ap-south-1a",
              "kubernetes.io/cluster/learnk8s": "shared",
              "kuebernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "k8s-staging-vpc-public-ap-south-1a",
              "kubernetes.io/cluster/learnk8s": "shared",
              "kuebernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c18147fe7ff676c9"
          },
          "dependencies": [
            "module.staging_cluster.data.aws_availability_zones.available",
            "module.staging_cluster.module.vpc.aws_vpc.this",
            "module.staging_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:subnet/subnet-0fa571b531711b734",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa571b531711b734",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224264690046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-staging-vpc-public-ap-south-1b",
              "kubernetes.io/cluster/learnk8s": "shared",
              "kuebernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "k8s-staging-vpc-public-ap-south-1b",
              "kubernetes.io/cluster/learnk8s": "shared",
              "kuebernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c18147fe7ff676c9"
          },
          "dependencies": [
            "module.staging_cluster.data.aws_availability_zones.available",
            "module.staging_cluster.module.vpc.aws_vpc.this",
            "module.staging_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:subnet/subnet-0b18a055a852706e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.16.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b18a055a852706e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224264690046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-staging-vpc-public-ap-south-1c",
              "kubernetes.io/cluster/learnk8s": "shared",
              "kuebernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "k8s-staging-vpc-public-ap-south-1c",
              "kubernetes.io/cluster/learnk8s": "shared",
              "kuebernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c18147fe7ff676c9"
          },
          "dependencies": [
            "module.staging_cluster.data.aws_availability_zones.available",
            "module.staging_cluster.module.vpc.aws_vpc.this",
            "module.staging_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.staging_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.staging_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:224264690046:vpc/vpc-0c18147fe7ff676c9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0075c04cb84b63539",
            "default_route_table_id": "rtb-027e62162cb71b94c",
            "default_security_group_id": "sg-0e3acb3ea2c3d0714",
            "dhcp_options_id": "dopt-00633f2212ba0ab88",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c18147fe7ff676c9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-027e62162cb71b94c",
            "owner_id": "224264690046",
            "tags": {
              "Name": "k8s-staging-vpc"
            },
            "tags_all": {
              "Name": "k8s-staging-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}